# Ticket

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 001_init.sql  002_advanced_features.sql  003_custom_prefix.sql  004_premium_and_settings.sql  005_blacklist.sql  006_panel_categories.sql  007_ping_role.sql  008_panel_customization.sql  009_performance_indexes.sql  010_opening_message.sql  011_optimize_queries.sql  012_category_button_colors.sql  013_welcome_messages_and_escalation.sql  014_reminders.sql  015_tags.sql  016_assign_and_autoclose.sql  017_backup_categories.sql  018_channel_name_template.sql  019_ignored_channels.sql
src/: config.rs  main.rs
src/commands/: assign.rs  blacklist.rs  category.rs  channelname.rs  claim.rs  close.rs  doc.rs  escalate.rs  handle.rs  mod.rs  note.rs  panel.rs  priority.rs  setup.rs  stats.rs  supportrole.rs  tag.rs
src/database/: ignore.rs  mod.rs  tag.rs  ticket.rs
src/handlers/: button.rs  menus.rs  mod.rs
src/logging/: commands.rs  database.rs  guild.rs  interactions.rs  mod.rs  webhooks.rs
src/models/: mod.rs
src/prefix/: admin.rs  channelname.rs  doc.rs  help.rs  ignore.rs  mod.rs  owner.rs  reminder.rs  roast.rs  settings.rs  setup.rs  tag.rs  ticket.rs  toast.rs  utility.rs
src/utils/: mod.rs  transcript.rs
templates/: transcript.html
